Create DM interaction

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,3 +20,17 @@ input[type=checkbox] {
     border-radius: 5px;
     background-color: #ccc;
 }
+
+.quest, .quest-response {
+    background-color: #ccc;
+    padding: 15px;
+    white-space: pre-line;
+    margin: 0 10px;
+}
+
+.report {
+    background-color: #ccc;
+    padding: 15px;
+    margin: 0 10px;
+}
+
