Change navbar to sidebar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,3 +34,34 @@ input[type=checkbox] {
     margin: 0 10px;
 }
 
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 300px;
+    background-color: #154775;
+    color: white;
+    min-height: 100vh;
+    padding: 25px;
+}
+
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu li {
+    margin: 15px 0;
+}
+
+.menu li a, .menu li a:visited, .menu li a:active, .menu li a:hover, .menu li a:focus {
+    color: white;
+    text-decoration: none;
+}
+
+.page {
+    margin-left: 300px;
+    padding: 25px;
+}
+
