--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -72,3 +72,23 @@ input[type=checkbox] {
     white-space: pre-line;
 }
 
+.close {
+    font-size: 24px;
+    font-weight: bold;
+    color: #555;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    float: right;
+}
+
+.login-box {
+    padding: 25px;
+    background-color: #ccc;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
